k3d/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: assetgen
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
