k3d/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assetgen-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: assets.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: assetgenerator
                port:
                  number: 5200
